--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="navbar">
     <div class="navbar-start">
       <div class="navbar-logo">
-        <i class="navbar-logo-img ph-fork-knife"></i>
+        <i class="navbar-logo-img ph-fork-knife-fill"></i>
         <p class="navbar-logo-name">Patoo</p>
       </div>
       <div class="navbar-toggle-wrapper">
@@ -25,6 +25,7 @@
       <ul class="navbar-list">
         <li class="navbar-item"><a href="#" class="navbar-link">Home</a></li>
         <li class="navbar-item"><a href="#" class="navbar-link">About Us</a></li>
+        <li class="navbar-item"><a href="#" class="navbar-link">Features</a></li>
         <li class="navbar-item"><a href="#" class="navbar-link">Our Menu</a></li>
       </ul>
     </div>
@@ -59,8 +60,56 @@
         </div>
         <div class="about-us-texts">
           <h2 class="heading-secondary">Professional Cooks with tons of experience</h2>
-          <p class="about-us-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores totam autem cumque quasi mollitia incidunt tenetur ut, magni possimus deserunt numquam tempore facilis exercitationem rem aut blanditiis illo, quos vitae nobis voluptates itaque vero quidem. Dignissimos labore vero commodi sit dolorum quod cumque veniam, esse quo eligendi. Cupiditate harum officia aut necessitatibus, ut expedita quas explicabo, corporis inventore nisi velit totam delectus amet cum accusamus accusantium asperiores! Dolore alias quaerat inventore ad asperiores cumque recusandae.</p>
+          <p class="about-us-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores totam autem cumque quasi mollitia incidunt tenetur ut, magni possimus deserunt numquam tempore facilis exercitationem rem aut blanditiis illo, quos vitae .</p>
           <p class="about-us-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, in enim? Voluptates ipsum tempora alias neque magnam, placeat consectetur tempore necessitatibus aut hic quas corrupti molestiae assumenda quasi, est libero excepturi quisquam officiis reiciendis. Officiis!</p>
+        </div>
+      </div>
+    </section>
+    <section class="section-features section features">
+      <h1 class="heading-primary">Our Features</h1>
+      <div class="card-wrapper">
+        <div class="card">
+          <i class="card-icon ph-knife-fill"></i>
+          <div class="card-info">
+            <p class="card-heading">The Best Chefs</p>
+            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id perferendis amet maxime voluptates libero animi nesciunt iure excepturi eligendi sequi.
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit
+            </p>
+          </div>
+        </div>
+
+        <div class="card">
+          <i class="card-icon ph-storefront-fill"></i>
+          <div class="card-info">
+            <p class="card-heading">More than 100+ branches </p>
+            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id perferendis amet maxime voluptates libero animi nesciunt iure excepturi eligendi sequi.
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, repudiandae inventore. 
+
+            </p>
+
+          </div>
+        </div>
+
+        <div class="card">
+          <i class="card-icon ph-currency-circle-dollar-fill"></i>
+          <div class="card-info">
+            <p class="card-heading">Cost Effective Fine Dine</p>
+            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id perferendis amet maxime voluptates libero animi nesciunt iure excepturi eligendi sequi.
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, repudiandae 
+
+            </p>
+          </div>
+        </div>
+
+        <div class="card">
+          <i class="card-icon ph-martini-fill"></i>
+          <div class="card-info">
+            <p class="card-heading">Lavish Experience</p>
+            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id perferendis amet maxime voluptates libero animi nesciunt iure excepturi eligendi sequi.
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, repudiandae inventore.
+
+            </p>
+          </div>
         </div>
       </div>
     </section>
