--- a/index.html
+++ b/index.html
@@ -113,6 +113,160 @@
         </div>
       </div>
     </section>
+    <section class="section section-menu menu">
+      <h1 class="heading-primary">Our Menu</h1>
+      <div class="menu-wrapper">
+        <ul class="menu-list">
+          <li data-tab-target="#breakfast" class="menu-item menu-item-active">Breakfast</li>
+          <li data-tab-target="#lunch" class="menu-item">Lunch</li>
+          <li data-tab-target="#dinner" class="menu-item">Dinner</li>
+        </ul>
+        <div class="menu-content">
+          <div id="breakfast" class="menu-food menu-food-active" data-tab-content>
+            <div class="menu-content">
+              <div class="menu-card">
+                <div class="menu-card-info">
+                  <p class="menu-card-name">Khanom krok</p>
+                  <p class="menu-card-price">$30</p>
+                </div>
+                <p class="menu-card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita nam vel itaque eius voluptatem tempora perferendis sed dolores ea mollitia!
+                </p>
+              </div>
+              <div class="menu-card">
+                <div class="menu-card-info">
+                  <p class="menu-card-name">Jok</p>
+                  <p class="menu-card-price">$15</p>
+                </div>
+                <p class="menu-card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque voluptatum nesciunt, at porro nisi reprehenderit repudiandae quibusdam odio dicta optio?</p>
+              </div>
+              <div class="menu-card">
+                <div class="menu-card-info">
+                  <p class="menu-card-name">Khao Tom</p>
+                  <p class="menu-card-price">$20</p>
+                </div>
+                <p class="menu-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic reiciendis sequi suscipit harum maxime ea ducimus sit repellat nam obcaecati!</p>
+              </div>              <div class="menu-card">
+                <div class="menu-card-info">
+                  <p class="menu-card-name">Dim sum</p>
+                  <p class="menu-card-price">$40</p>
+                </div>
+                <p class="menu-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem hic incidunt sapiente explicabo laborum consectetur cumque, nisi temporibus magnam modi.</p>
+              </div>
+              <div class="menu-card">
+                <div class="menu-card-info">
+                  <p class="menu-card-name">Roti canai</p>
+                  <p class="menu-card-price">$35</p>
+                </div>
+                <p class="menu-card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum velit deleniti est saepe, expedita suscipit numquam eos minus amet dolorem?</p>
+              </div>              <div class="menu-card">
+                <div class="menu-card-info">
+                  <p class="menu-card-name">Tom luad moo</p>
+                  <p class="menu-card-price">$25</p>
+                </div>
+                <p class="menu-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, fuga? Sequi modi quam laborum sit dicta voluptate laudantium unde odit?</p>
+              </div>
+            </div>
+          </div>
+          <div id="lunch" class="menu-food" data-tab-content>
+            <div class="menu-content">
+              <div class="menu-card">
+                <div class="menu-card-info">
+                  <p class="menu-card-name">Tom Yum Goong</p>
+                  <p class="menu-card-price">$45</p>
+                </div>
+                <p class="menu-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae minima error, magni fuga repellendus sapiente tempore distinctio porro maxime saepe.</p>
+              </div>              <div class="menu-card">
+                <div class="menu-card-info">
+                  <p class="menu-card-name">Yam Talay</p>
+                  <p class="menu-card-price">$40</p>
+                </div>
+                <p class="menu-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, iste esse! Esse nesciunt, quod quaerat eos soluta molestiae facere unde.</p>
+              </div>              <div class="menu-card">
+                <div class="menu-card-info">
+                  <p class="menu-card-name">Pad Thai</p>
+                  <p class="menu-card-price">$65</p>
+                </div>
+                <p class="menu-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, voluptate esse? Atque sint quis nisi non explicabo, quo consequuntur animi!</p>
+              </div>              <div class="menu-card">
+                <div class="menu-card-info">
+                  <p class="menu-card-name">Pad See Eiw</p>
+                  <p class="menu-card-price">$65</p>
+                </div>
+                <p class="menu-card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, natus quasi pariatur blanditiis nostrum obcaecati. Unde molestias quas illo voluptatum!</p>
+              </div>              <div class="menu-card">
+                <div class="menu-card-info">
+                  <p class="menu-card-name">Pak Boong</p>
+                  <p class="menu-card-price">$45</p>
+                </div>
+                <p class="menu-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi amet maxime quo animi dolore itaque magnam! Velit distinctio corporis voluptates.</p>
+              </div>              <div class="menu-card">
+                <div class="menu-card-info">
+                  <p class="menu-card-name">Panang</p>
+                  <p class="menu-card-price">$70</p>
+                </div>
+                <p class="menu-card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam distinctio explicabo maiores in harum qui aut nihil? Aperiam, facere nam!</p>
+              </div>              <div class="menu-card">
+                <div class="menu-card-info">
+                  <p class="menu-card-name">Khao Soi</p>
+                  <p class="menu-card-price">$50</p>
+                </div>
+                <p class="menu-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis temporibus neque nihil eligendi odio iusto ipsam doloremque eos, dolores iure!</p>
+              </div>              <div class="menu-card">
+                <div class="menu-card-info">
+                  <p class="menu-card-name">Kai Jeow</p>
+                  <p class="menu-card-price">$55</p>
+                </div>
+                <p class="menu-card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti provident veritatis nisi molestiae doloribus animi illo, similique nihil qui sunt?</p>
+              </div>              <div class="menu-card">
+                <div class="menu-card-info">
+                  <p class="menu-card-name">Kai Med Ma Muang</p>
+                  <p class="menu-card-price">$75</p>
+                </div>
+                <p class="menu-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt similique et animi doloribus excepturi! Doloribus quia fugit odio voluptas provident!
+
+                </p>
+              </div>
+            </div>
+          </div>  
+          <div id="dinner" class="menu-food" data-tab-content>
+            <div class="menu-content">
+              <div class="menu-card">
+                <div class="menu-card-info">
+                  <p class="menu-card-name">Gai Tod</p>
+                  <p class="menu-card-price">$50</p>
+                </div>
+                <p class="menu-card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo omnis labore neque animi ut placeat aliquid nam, fuga obcaecati autem.</p>
+              </div>              <div class="menu-card">
+                <div class="menu-card-info">
+                  <p class="menu-card-name">Gaeng Keow Wan</p>
+                  <p class="menu-card-price">$40</p>
+                </div>
+                <p class="menu-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic reiciendis sequi suscipit harum maxime ea ducimus sit repellat nam obcaecati!</p>
+              </div>              <div class="menu-card">
+                <div class="menu-card-info">
+                  <p class="menu-card-name">Pad Krapow Moo Saap</p>
+                  <p class="menu-card-price">$60</p>
+                </div>
+                <p class="menu-card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates saepe rerum eaque sapiente sunt magni ducimus eius laboriosam quam alias.</p>
+              </div>              <div class="menu-card">
+                <div class="menu-card-info">
+                  <p class="menu-card-name">Khao Pad</p>
+                  <p class="menu-card-price">$45</p>
+                </div>
+                <p class="menu-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio animi distinctio aut molestiae incidunt velit deserunt consequuntur sapiente id corrupti.</p>
+              </div>              <div class="menu-card">
+                <div class="menu-card-info">
+                  <p class="menu-card-name">Pad Phuk Tong</p>
+                  <p class="menu-card-price">$55</p>
+                </div>
+                <p class="menu-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil harum similique aliquam in! Minima hic similique fugit, consequatur porro nobis?</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
