--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>thaifood</title>
+  <title>ThaiFu!</title>
+  <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
   <link rel="stylesheet" href="./css/style.css">
   <script crossOrigin = "Anonymous" src="https://unpkg.com/phosphor-icons"></script>
   <script defer src="./js/index.js"></script>
@@ -23,7 +24,7 @@
     </div>
     <div class="navbar-links">
       <ul class="navbar-list">
-        <li class="navbar-item"><a href="#" class="navbar-link">Home</a></li>
+        <li class="navbar-item"><a href="/" class="navbar-link">Home</a></li>
         <li class="navbar-item"><a href="#" class="navbar-link">About Us</a></li>
         <li class="navbar-item"><a href="#" class="navbar-link">Features</a></li>
         <li class="navbar-item"><a href="#" class="navbar-link">Our Menu</a></li>
@@ -31,7 +32,7 @@
     </div>
     <div class="navbar-links">
       <ul class="navbar-list">
-        <li class="navbar-item"><a href="#" class="navbar-btn navbar-link">Contact Us</a></li>
+        <li class="navbar-item"><a href="/contact-us.html" class="navbar-btn navbar-link">Contact Us</a></li>
         <li class="navbar-item"><a href="#" class="navbar-btn navbar-link">Find Us</a></li>
       </ul>
     </div>
