--- a/contact-us.html
+++ b/contact-us.html
@@ -16,34 +16,34 @@
         <i class="ph-house-fill"></i>
       </a>
     </div>
-    <div class="form-container">
-      <h1 class="heading-primary">Write To Us!</h1>
+    <div class="form-container mt-med">
+      <h1 class="heading-primary form-heading">Write To Us!</h1>
       <form action="#" class="form">
         <div class="form-row">
           <div class="form-group">
-            <input type="text" class="form-input" name="fname" required autocomplete="false">
+            <input type="text" class="form-input" name="fname" required autocomplete="off">
             <label for="fname" class="form-label">First Name</label>
           </div>
           <div class="form-group">
-            <input type="text" class="form-input" name="lname" required autocomplete="false">
+            <input type="text" class="form-input" name="lname" required autocomplete="off">
             <label for="lname" class="form-label">Last Name</label>
           </div>
         </div>
 
         <div class="form-row">
           <div class="form-group">
-            <input type="email" class="form-input" name="email" required autocomplete="false" >
+            <input type="email" class="form-input" name="email" required autocomplete="off" >
             <label for="email" class="form-label">Email</label>
           </div>
           <div class="form-group">
-            <input type="tel" class="form-input" name="tel"  required autocomplete="false">
+            <input type="tel" class="form-input" name="tel"  required autocomplete="off">
             <label for="tel" class="form-label" >Contact Number</label>
           </div>
         </div>
 
         <div class="form-row form-row-textarea">
           <div class="form-group">
-            <textarea name="mes" id="mes" class="form-textarea form-input" cols="30" rows="10" required autocomplete="false"></textarea>
+            <textarea name="mes" id="mes" class="form-textarea form-input" cols="30" rows="10" required autocomplete="off"></textarea>
             <label for="mes" class="form-label">Message</label>
           </div>
         </div>
