--- a/index.html
+++ b/index.html
@@ -268,6 +268,101 @@
         </div>
       </div>
     </section>
+    <section class="section section-reviews reviews">
+      <h1 class="heading-primary">People Love Us!</h1>
+      <div class="carousel">
+        <div class="carousel-container">
+        <div class="carousel-inner">
+        <div class="carousel-slide">
+          <div class="review">
+            <div class="review-person">
+              <img src="./img/user-4.jpeg" alt="" class="review-img">
+              <div class="review-details">
+                <p class="review-name">Ania Cubow</p>
+                <div class="review-stars">
+                  <i class="ph-star-fill"></i>
+                  <i class="ph-star-fill"></i>
+                  <i class="ph-star-fill"></i>
+                  <i class="ph-star-fill"></i>
+                  <i class="ph-star-fill"></i>
+                </div>
+              </div>
+            </div>
+            <div class="review-content">
+              <p class="review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum libero, exercitationem officia ex illum autem vitae cumque dolores est accusantium?</p>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-slide">
+          <div class="review">
+            <div class="review-person">
+              <img src="./img/user-2.jpeg" alt="" class="review-img">
+              <div class="review-details">
+                <p class="review-name">Beao Caners</p>
+                <div class="review-stars">
+                  <i class="ph-star-fill"></i>
+                  <i class="ph-star-fill"></i>
+                  <i class="ph-star-fill"></i>
+                  <i class="ph-star-fill"></i>
+                  <i class="ph-star-fill"></i>
+                </div>
+              </div>
+            </div>
+            <div class="review-content">
+              <p class="review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum libero, exercitationem officia ex illum autem vitae cumque dolores est accusantium?</p>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-slide">
+          <div class="review">
+            <div class="review-person">
+              <img src="./img/user-3.jpeg" alt="" class="review-img">
+              <div class="review-details">
+                <p class="review-name">Quinsy Larcon</p>
+                <div class="review-stars">
+                  <i class="ph-star-fill"></i>
+                  <i class="ph-star-fill"></i>
+                  <i class="ph-star-fill"></i>
+                  <i class="ph-star-fill"></i>
+                  <i class="ph-star-fill"></i>
+                </div>
+              </div>
+            </div>
+            <div class="review-content">
+              <p class="review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum libero, exercitationem officia ex illum autem vitae cumque dolores est accusantium?</p>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-slide">
+          <div class="review">
+            <div class="review-person">
+              <img src="./img/user-1.jpeg" alt="" class="review-img">
+              <div class="review-details">
+                <p class="review-name">Brad Traversi</p>
+                <div class="review-stars">
+                  <i class="ph-star-fill"></i>
+                  <i class="ph-star-fill"></i>
+                  <i class="ph-star-fill"></i>
+                  <i class="ph-star-fill"></i>
+                  <i class="ph-star-fill"></i>
+                </div>
+              </div>
+            </div>
+            <div class="review-content">
+              <p class="review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum libero, exercitationem officia ex illum autem vitae cumque dolores est accusantium?</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+      </div>
+      <!-- Buttons -->
+      <div class="carousel-btns">
+        <button id="btn-prev" class="carousel-btn"><span>&larr;</span></button>
+        <button id="btn-next" class="carousel-btn">&rarr;</button>
+      </div>
+ 
+    </section>
   </main>
 </body>
 </html>
