--- a/index.html
+++ b/index.html
@@ -361,7 +361,19 @@
         <button id="btn-prev" class="carousel-btn"><span>&larr;</span></button>
         <button id="btn-next" class="carousel-btn">&rarr;</button>
       </div>
- 
+    </section>
+    <section class="section section-gallery gallery">
+      <h1 class="heading-primary">Gallery</h1>
+        <div class="gallery-container">
+          <div class="gallery-img gallery-img-1"></div>
+          <div class="gallery-img gallery-img-2"></div>
+          <div class="gallery-img gallery-img-3"></div>
+          <div class="gallery-img gallery-img-4"></div>
+          <div class="gallery-img gallery-img-5"></div>
+          <div class="gallery-img gallery-img-6"></div>
+          <div class="gallery-img gallery-img-7"></div>
+          <div class="gallery-img gallery-img-8"></div>
+        </div>
     </section>
   </main>
 </body>
