changes in gallery

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         <div class="carousel-slide">
           <div class="review">
             <div class="review-person">
-              <img src="./img/user-4.jpeg" alt="" class="review-img">
+              <img src="./img/users/user-4.jpeg" alt="" class="review-img">
               <div class="review-details">
                 <p class="review-name">Ania Cubow</p>
                 <div class="review-stars">
@@ -296,7 +296,7 @@
         <div class="carousel-slide">
           <div class="review">
             <div class="review-person">
-              <img src="./img/user-2.jpeg" alt="" class="review-img">
+              <img src="./img/users/user-2.jpeg" alt="" class="review-img">
               <div class="review-details">
                 <p class="review-name">Beao Caners</p>
                 <div class="review-stars">
@@ -316,7 +316,7 @@
         <div class="carousel-slide">
           <div class="review">
             <div class="review-person">
-              <img src="./img/user-3.jpeg" alt="" class="review-img">
+              <img src="./img/users/user-3.jpeg" alt="" class="review-img">
               <div class="review-details">
                 <p class="review-name">Quinsy Larcon</p>
                 <div class="review-stars">
@@ -336,7 +336,7 @@
         <div class="carousel-slide">
           <div class="review">
             <div class="review-person">
-              <img src="./img/user-1.jpeg" alt="" class="review-img">
+              <img src="./img/users/user-1.jpeg" alt="" class="review-img">
               <div class="review-details">
                 <p class="review-name">Brad Traversi</p>
                 <div class="review-stars">
@@ -365,14 +365,31 @@
     <section class="section section-gallery gallery">
       <h1 class="heading-primary">Gallery</h1>
         <div class="gallery-container">
-          <div class="gallery-img gallery-img-1"></div>
-          <div class="gallery-img gallery-img-2"></div>
-          <div class="gallery-img gallery-img-3"></div>
-          <div class="gallery-img gallery-img-4"></div>
-          <div class="gallery-img gallery-img-5"></div>
-          <div class="gallery-img gallery-img-6"></div>
-          <div class="gallery-img gallery-img-7"></div>
-          <div class="gallery-img gallery-img-8"></div>
+          
+          <div class="gallery-img-container">
+          <img loading="lazy" src="./img/high/food-1.jpg" class="gallery-img gallery-img-1">
+          </div>
+          <div class="gallery-img-container">
+          <img loading="lazy" src="./img/high/food-2.jpg" class="gallery-img gallery-img-2">
+          </div>
+          <div class="gallery-img-container">
+          <img loading="lazy" src="./img/high/food-3.jpg" class="gallery-img gallery-img-3">
+          </div>
+          <div class="gallery-img-container">
+          <img loading="lazy" src="./img/high/food-4.jpg" class="gallery-img gallery-img-4">
+          </div>
+          <div class="gallery-img-container">
+          <img loading="lazy" src="./img/high/food-5.jpg" class="gallery-img gallery-img-5">
+          </div>
+          <div class="gallery-img-container">
+          <img loading="lazy" src="./img/high/food-6.jpg" class="gallery-img gallery-img-6">
+          </div>
+          <div class="gallery-img-container">
+          <img loading="lazy" src="./img/high/food-7.jpg" class="gallery-img gallery-img-7">
+          </div>
+          <div class="gallery-img-container">
+          <img loading="lazy" src="./img/high/food-8.jpg" class="gallery-img gallery-img-8">
+          </div>
         </div>
     </section>
   </main>
