--- a/index.html
+++ b/index.html
@@ -367,28 +367,28 @@
         <div class="gallery-container">
           
           <div class="gallery-img-container">
-          <img loading="lazy" src="./img/high/food-1.jpg" class="gallery-img gallery-img-1">
+          <img loading="lazy" src="./img/food-1.jpg" class="gallery-img gallery-img-1">
           </div>
           <div class="gallery-img-container">
-          <img loading="lazy" src="./img/high/food-2.jpg" class="gallery-img gallery-img-2">
+          <img loading="lazy" src="./img/food-2.jpg" class="gallery-img gallery-img-2">
           </div>
           <div class="gallery-img-container">
-          <img loading="lazy" src="./img/high/food-3.jpg" class="gallery-img gallery-img-3">
+          <img loading="lazy" src="./img/food-3.jpg" class="gallery-img gallery-img-3">
           </div>
           <div class="gallery-img-container">
-          <img loading="lazy" src="./img/high/food-4.jpg" class="gallery-img gallery-img-4">
+          <img loading="lazy" src="./img/food-4.jpg" class="gallery-img gallery-img-4">
           </div>
           <div class="gallery-img-container">
-          <img loading="lazy" src="./img/high/food-5.jpg" class="gallery-img gallery-img-5">
+          <img loading="lazy" src="./img/food-5.jpg" class="gallery-img gallery-img-5">
           </div>
           <div class="gallery-img-container">
-          <img loading="lazy" src="./img/high/food-6.jpg" class="gallery-img gallery-img-6">
+          <img loading="lazy" src="./img/food-6.jpg" class="gallery-img gallery-img-6">
           </div>
           <div class="gallery-img-container">
-          <img loading="lazy" src="./img/high/food-7.jpg" class="gallery-img gallery-img-7">
+          <img loading="lazy" src="./img/food-7.jpg" class="gallery-img gallery-img-7">
           </div>
           <div class="gallery-img-container">
-          <img loading="lazy" src="./img/high/food-8.jpg" class="gallery-img gallery-img-8">
+          <img loading="lazy" src="./img/food-8.jpg" class="gallery-img gallery-img-8">
           </div>
         </div>
     </section>
