added lazy loading

--- a/index.html
+++ b/index.html
@@ -367,28 +367,28 @@
         <div class="gallery-container">
           
           <div class="gallery-img-container">
-          <img loading="lazy" src="./img/food-1.jpg" class="gallery-img gallery-img-1">
+          <img loading="lazy" src="img/food-1-res.jpg" data-src="./img/food-1.jpg" class="gallery-img gallery-img-1 img-blur">
           </div>
           <div class="gallery-img-container">
-          <img loading="lazy" src="./img/food-2.jpg" class="gallery-img gallery-img-2">
+          <img loading="lazy" src="img/food-2-res.jpg" data-src="./img/food-2.jpg" class="gallery-img gallery-img-2 img-blur">
           </div>
           <div class="gallery-img-container">
-          <img loading="lazy" src="./img/food-3.jpg" class="gallery-img gallery-img-3">
+          <img loading="lazy" src="img/food-3-res.jpg" data-src="./img/food-3.jpg" class="gallery-img gallery-img-3 img-blur">
           </div>
           <div class="gallery-img-container">
-          <img loading="lazy" src="./img/food-4.jpg" class="gallery-img gallery-img-4">
+          <img loading="lazy" src="img/food-4-res.jpg" data-src="./img/food-4.jpg" class="gallery-img gallery-img-4 img-blur">
           </div>
           <div class="gallery-img-container">
-          <img loading="lazy" src="./img/food-5.jpg" class="gallery-img gallery-img-5">
+          <img loading="lazy" src="img/food-5-res.jpg" data-src="./img/food-5.jpg" class="gallery-img gallery-img-5 img-blur">
           </div>
           <div class="gallery-img-container">
-          <img loading="lazy" src="./img/food-6.jpg" class="gallery-img gallery-img-6">
+          <img loading="lazy" src="img/food-6-res.jpg" data-src="./img/food-6.jpg" class="gallery-img gallery-img-6 img-blur">
           </div>
           <div class="gallery-img-container">
-          <img loading="lazy" src="./img/food-7.jpg" class="gallery-img gallery-img-7">
+          <img loading="lazy" src="img/food-7-res.jpg" data-src="./img/food-7.jpg" class="gallery-img gallery-img-7 img-blur">
           </div>
           <div class="gallery-img-container">
-          <img loading="lazy" src="./img/food-8.jpg" class="gallery-img gallery-img-8">
+          <img loading="lazy" src="img/food-8-res.jpg" data-src="./img/food-8.jpg" class="gallery-img gallery-img-8 img-blur">
           </div>
         </div>
     </section>
