--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
         <li class="navbar-item"><a href="#" class="navbar-link">About Us</a></li>
         <li class="navbar-item"><a href="#" class="navbar-link">Features</a></li>
         <li class="navbar-item"><a href="#" class="navbar-link">Our Menu</a></li>
+        <li class="navbar-item"><a href="#" class="navbar-link">Reviews</a></li>
+        <li class="navbar-item"><a href="#" class="navbar-link">Gallery</a></li>
       </ul>
     </div>
     <div class="navbar-links">
       <ul class="navbar-list">
-        <li class="navbar-item"><a href="/contact-us.html" class="navbar-btn navbar-link">Contact Us</a></li>
+        <li class="navbar-item"><a href="#" class="navbar-btn navbar-link">Contact Us</a></li>
         <li class="navbar-item"><a href="#" class="navbar-btn navbar-link">Find Us</a></li>
       </ul>
     </div>
@@ -393,5 +395,10 @@
         </div>
     </section>
   </main>
+  <footer class="footer">
+    
+    <div class="footer-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus praesentium odit tempore eum neque necessitatibus sunt quae ut exercitationem modi quo voluptatum blanditiis, saepe pariatur possimus nobis dolor dolorum alias.</div>
+  </div>
+  </footer>
 </body>
 </html>
