--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Thaifu!">
-<meta property="og:description" content="Premium Thai Food At owest Prices">
-<meta property="og:image" content="https://i.ibb.co/QjMNdLF/favicon.png">
+<meta property="og:description" content="Premium Thai Food At Lowest Prices">
+<meta property="og:image" content="https://i.ibb.co/WVpGvGn/hero.png">
 <meta property="og:url" content="http://thaifu.netlify.app">
 <meta name="twitter:card" content="summary_large_image">
 
