--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
   <title>ThaiFu!</title>
   <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
   <link rel="stylesheet" href="./css/style.css">
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js" crossorigin="anonymous"></script>
   <script crossOrigin = "Anonymous" src="https://unpkg.com/phosphor-icons"></script>
   <script defer src="./js/index.js"></script>
 </head>
 <body>
+  <div class="content-wrapper">
   <header class="navbar">
     <div class="navbar-start">
       <div class="navbar-logo">
@@ -401,5 +403,20 @@
         </div>
     </section>
   </main>
+</div>
+  <div class="intro">
+    <div class="intro-textbox">
+      <h1 class="intro-hide">
+        <span class="intro-text">Introducing</span>
+      </h1>
+      <h1 class="intro-hide">
+        <span class="intro-text">Thaifu!</span>
+      </h1>
+      <h1 class="intro-hide">
+        <span class="intro-text">Award Winning Restaurant.</span>
+      </h1>
+    </div>
+    
+  </div>
 </body>
 </html> 
