removed sticky nav

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <div class="navbar-links">
       <ul class="navbar-list">
         <li class="navbar-item"><a href="/" class="navbar-link">Home</a></li>
-        <li class="navbar-item"><a href="#" class="navbar-link">About Us</a></li>
-        <li class="navbar-item"><a href="#" class="navbar-link">Features</a></li>
-        <li class="navbar-item"><a href="#" class="navbar-link">Our Menu</a></li>
-        <li class="navbar-item"><a href="#" class="navbar-link">Reviews</a></li>
-        <li class="navbar-item"><a href="#" class="navbar-link">Gallery</a></li>
+        <li class="navbar-item"><a href="#" data-link="about-us" class="navbar-link">About Us</a></li>
+        <li class="navbar-item"><a href="#" data-link="features" class="navbar-link">Features</a></li>
+        <li class="navbar-item"><a href="#" data-link="menu" class="navbar-link">Our Menu</a></li>
+        <li class="navbar-item"><a href="#" data-link="reviews" class="navbar-link">Reviews</a></li>
+        <li class="navbar-item"><a href="#" data-link="gallery" class="navbar-link">Gallery</a></li>
       </ul>
     </div>
     <div class="navbar-links">
@@ -64,7 +64,7 @@
       </div>
     </section>
     <section class="section section-about-us about-us">
-      <h1 class="heading-primary">Who Are We?</h1>
+      <h1 class="heading-primary about-heading">Who Are We?</h1>
       <div class="about-us-content">
         <div class="about-us-images">
           <img src="./img/aboutus.svg" class="about-us-image"></img>
