--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
       <div class="hero-text-container">
         <p class="hero-text">
           Most Premium Thai Cuisine you will ever get.
-          <span class="hero-special">Thaify</span>
+          <span class="hero-special">Thaifu</span>
         </p>
         <p class="hero-para">
-          ‘Patoo’ offers a selection of popular Thai dishes, light snacks and an interesting variety of delicious Thai desserts – all freshly prepared on site by rewoned chefs.
+          ‘Patoo’ offers a selection of popular Thai dishes, light snacks and an interesting variety of delicious Thai desserts – all freshly prepared on site by professional chefs.
         </p>
         <a href="#" data-link="about-us" class="hero-btn">Learn More &rarr;</a>
       </div>
