--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
             </div>
           </div>
           <div class="form-group form-textarea-container">
-            <textarea class="form-input form-textarea" name="text" id="text" cols="30" rows="10"></textarea>
+            <textarea class="form-input form-textarea" name="text" id="text" cols="30" rows="10" required></textarea>
             <label for="text" class="form-label">Message</label>
           </div>
           <div class="form-group form-btn-container">
